Bug 302060 - Current activity and activity change signal not available in API
Summary: Current activity and activity change signal not available in API
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: scripting (other bugs)
Version First Reported In: git master
Platform: Ubuntu Linux
: NOR normal
Target Milestone: 4.9 RC 1
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/105...
Keywords:
Depends on:
Blocks:
 
Reported: 2012-06-17 14:05 UTC by mokush
Modified: 2012-06-24 16:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:
mgraesslin: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mokush 2012-06-17 14:05:13 UTC
The currently running activity Id is not available to KWin scripts.

Also, there isn't a signal available for when switching to a different activity. (Right now, we can use currentDesktopChanged(), since it triggers when switching activity, but it's not optimal)

Reproducible: Always



Expected Results:  
It would be handy to have a string property, in the Workspace, to hold the current activity, and a signal (maybe currentActivityChanged) similar to currentDesktopChanged, also on Workspace.
Comment 1 Martin Flöser 2012-06-24 16:36:09 UTC
Git commit 3071d561f5708ddc40aad3e9e6ed5218476fe64b by Martin Gräßlin.
Committed on 21/06/2012 at 20:37.
Pushed by graesslin into branch 'master'.

Add activity support to Workspace Script Wrapper and Effects

New properties for the current activity and the available
activities plus related signals in scripts. Signals added to
effects.
FIXED-IN: 4.9.0

M  +3    -0    kwin/effects.cpp
M  +22   -1    kwin/libkwineffects/kwineffects.h
M  +7    -0    kwin/scripting/workspace_wrapper.cpp
M  +24   -0    kwin/scripting/workspace_wrapper.h
M  +7    -4    kwin/workspace.cpp
M  +19   -2    kwin/workspace.h

http://commits.kde.org/kde-workspace/3071d561f5708ddc40aad3e9e6ed5218476fe64b